--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,35 @@
 * {
+	font-family: "Futura", sans-serif;
 	display: grid;
 	grid: 100px / 100px / auto auto;
 	grid-column-gap: 5px;
 	grid-row-gap: 5px;
 }
 
+body{
+	background-image: linear-gradient(white, grey);
+}
+
+img{
+	width: 200px;
+	height: auto;
+	margin: 0.25rem;
+}
+
+#header{
+	height: 7rem;
+	background-color: #f0bfff;
+	margin-bottom: 5rem;
+	display: block;
+}
+#title{
+	text-align: left;
+	margin-left: 10rem;
+	margin-top: 0.5rem;
+}
+#gameTrackers{
+	display: block;
+}
 #img0{
 	grid-column: 1 / 1;
 	grid-row: 1 / 1;
